5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4467/executions/1590_1571.log
== TEST (2019-03-31 23:37:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(leia e converta para maiusculas.upper())
-- ERROR:
File "XXXX", line 4
    print(leia e converta para maiusculas.upper())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:38:04) 
-- CODE:
print(leia e converta para maiusculas.upper())
-- ERROR:
File "XXXX", line 1
    print(leia e converta para maiusculas.upper())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:39:04) 
-- CODE:
print(print.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(print.upper())
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
